Accessibility for links for each state with different backgrounds in grid and elsewhere.

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -552,7 +552,7 @@ span.data-entry-addon {
 	color: purple;
 }
 .jqx-widget a:hover,.jqx-widget a.hover {
-	color: #02458c;
+	color: #0460c1;
 	text-decoration: underline;
 }
 .jqx-widget a.focus, .jqx-widget a:focus {
