--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -538,11 +538,11 @@ span.data-entry-addon {
 	border-width: 0px 1px 1px 1px;
 	border-color: buttonface;
 }
-/*.jqx-widget a {
+.jqx-widget a {
 	margin-left: .2rem;
 	margin-right: .2rem;
-	color: #0460c1;
 }
+/*
 .jqx-widget a:link, .jqx-widget a.link {
 	color: #0460c1;
 }
