Accessibility for links for each state with different backgrounds in grid and elsewhere.

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -19,7 +19,8 @@ a:hover {
 	text-decoration: underline;
 }
 a:focus { 
-	color: #0460c1;
+	color: #094DD7;
+	text-decoration: underline;
 }
 a:active {
 	color: #0460c1;
