Accessibility for links for each state with different backgrounds in grid and elsewhere.

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -19,7 +19,7 @@ a:hover {
 	text-decoration: underline;
 }
 a:focus { 
-	color: #094DD7;
+	color: purple;
 	text-decoration: underline;
 }
 a:active {
