Accessibility for links for each state with different backgrounds in grid and elsewhere.

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -563,6 +563,9 @@ span.data-entry-addon {
 .jqx-widget a:active {
 	color: #0460c1;
 }*/
+.jqx-item {
+	color: transparent;
+}
 .text-success {
 	/*color: #1e5d16 !important;*/
 	color: #18780b !important;
