Accessibility for links for each state with different backgrounds in grid and elsewhere.

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -564,7 +564,7 @@ span.data-entry-addon {
 	color: #0460c1;
 }*/
 .jqx-item {
-	color: transparent;
+	color: black;
 }
 .text-success {
 	/*color: #1e5d16 !important;*/
