ISSUE: Redmine 866 PURPOSE: Update for API changes in release version 3.0.0 of event_date_qc. DESCRIPTION: string result status for amendment that makes a change has changed in ffdq-api, adjusting styling adding text-muted to old css include.

--- a/includes/css/mcz_style.css
+++ b/includes/css/mcz_style.css
@@ -2,6 +2,9 @@
 /*CSS STYLES -- MCZ on All Servers */
 /*\/\/\/\/\*/
 /*
+.text-muted { 
+   color: #6a737b!important;
+}
 .ac_results {
 	border: 1px solid gray;
 	background-color: white;
