ISSUE: BugID: 5892 PURPOSE: clearer workflow for reverification of edited georeferences. DESCRIPTION: Tuning highlighting of verification status and agent fields when editing from some status other than unverified

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -118,6 +118,9 @@ table td .small {
 .bg-verylightgreen {
 	background-color: #EBFFEB !important;
 }
+.bg-verylightred {
+	background-color: #FFD3D3 !important;
+}
 .bg-lt-gray {
 	background-color: #F0F3F7 !important;
 }
