--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -14,6 +14,9 @@ a:link {
 a:visited {
 	color: purple;
 }
+a.asifvisited {
+	color: purple;
+}
 a:hover {
 	color: #0460c1;
 	text-decoration: underline;
